Samples/VCS/Test1/Litecad.cs


  [DllImport("litecad.dll", EntryPoint="lcCrossGetAreaPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossGetAreaPoint(int iArea, int iPnt, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcEventReturnCode", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void EventReturnCode(int code);

  [DllImport("litecad.dll", EntryPoint="lcEventsEnable", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void EventsEnable(bool bEnable);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseMove(F_MOUSEMOVE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseDown", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseDown(F_MOUSEDOWN pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseUp", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseUp(F_MOUSEUP pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseDblClk", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseDblClk(F_MOUSEDBLCLK pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseSnap", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseSnap(F_MOUSESNAP pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseLeave", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseLeave(F_MOUSELEAVE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventMouseWheel", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventMouseWheel(F_MOUSEWHEEL pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventKeyDown", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventKeyDown(F_KEYDOWN pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventPaint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventPaint(F_PAINT pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventZoom", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventZoom(F_ZOOM pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventSelectView", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventSelectView(F_SELECTVIEW pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventGetPoint(F_GETPOINT pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventAddCommand", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventAddCommand(F_ADDCOMMAND pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdStart", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdStart(F_CMD_START pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdFinish", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdFinish(F_CMD_FINISH pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdMouseDown", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdMouseDown(F_CMD_MOUSEDOWN pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdMouseUp", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdMouseUp(F_CMD_MOUSEUP pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdMouseMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdMouseMove(F_CMD_MOUSEMOVE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventCmdString", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventCmdString(F_CMD_STRING pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventAddEntity", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventAddEntity(F_ADDENTITY pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventRegen", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventRegen(F_REGEN pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventFioProgress", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventFioProgress(F_FIOPROGRESS pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventSelection", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventSelection(F_SELECTION pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventPropChanged", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventPropChanged(F_PROPCHANGED pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventGripSelect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventGripSelect(F_GRIPSELECT pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventGripMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventGripMove(F_GRIPMOVE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventEntErase", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventEntErase(F_ENTERASE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventEntMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventEntMove(F_ENTMOVE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventEntRotate", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventEntRotate(F_ENTROTATE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventEntScale", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventEntScale(F_ENTSCALE pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventEntMirror", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventEntMirror(F_ENTMIRROR pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventHelp", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventHelp(F_HELP pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventAddStr", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventAddStr(F_ADDSTR pFunc);

  [DllImport("litecad.dll", EntryPoint="lcOnEventFontReplace", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void OnEventFontReplace(F_FONTREPLACE pFunc);

}
